<resources>
    <string name="app_name">Afisha</string>

    <string name="title_explore">Поиск</string>
    <string name="title_saved">Избранное</string>
    <string name="title_my_tickets">Мои билеты</string>
    <string name="title_profile">Профиль</string>

    <string name="moscow">Москва</string>
    <string name="date">Дата</string>
    <string name="type_with_double_dot">Тип:</string>
    <string name="event_image">Изображение мероприятия</string>
    <string name="details">Детали</string>
    <string name="title">Заголовок</string>
    <string name="price">Цена</string>
    <string name="rating_example">9.2</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="name">Имя</string>
    <string name="register"><u>Зарегистрироваться</u></string>
    <string name="do_you_have_account_login"><u>Уже есть аккаунт? Войти</u></string>
    <string name="avatar">Аватар</string>
    <string name="entry">Вход</string>
    <string name="fisha">фиша</string>
    <string name="authorization">Авторизация</string>
    <string name="edit_avatar">edit avatar</string>
    <string name="repeat_password">Повтор пароля</string>
    <string name="logout">Выйти</string>
    <string name="about_us">О нас</string>
    <string name="feedback">Обратная связь</string>
    <string name="username_or_email">Имя или Email</string>

    <string-array name="rubrics">
        <item>Всё</item>
        <item>Кино</item>
        <item>Концерты</item>
        <item>Театр</item>
        <item>Детям</item>
        <item>Выставки</item>
        <item>Спорт</item>
        <item>Стендап</item>
        <item>Экскурсии</item>
        <item>Шоу</item>
        <item>Квесты</item>
    </string-array>

    <string-array name="rubrics_query">
        <item>all</item>
        <item>cinema</item>
        <item>concert</item>
        <item>theatre</item>
        <item>kids</item>
        <item>art</item>
        <item>sport</item>
        <item>standup</item>
        <item>excursions</item>
        <item>show</item>
        <item>quest</item>
    </string-array>
</resources>