<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_explore"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/title_explore"
        app:itemIconTint="@color/nav_explore"
        app:itemTextColor="@color/nav_explore" />

    <item
        android:id="@+id/navigation_saved"
        android:icon="@drawable/ic_heart_black_24dp"
        android:title="@string/title_saved"
        app:itemIconTint="@color/nav_saved"
        app:itemTextColor="@color/nav_saved" />

    <item
        android:id="@+id/navigation_my_tickets"
        android:icon="@drawable/ic_ticket_black_24dp"
        android:title="@string/title_my_tickets"
        app:itemIconTint="@color/nav_my_tickets"
        app:itemTextColor="@color/nav_my_tickets" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_black_24dp"
        android:title="@string/title_profile"
        app:itemIconTint="@color/nav_profile"
        app:itemTextColor="@color/nav_profile" />

</menu>