<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/root"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:anrdoid="http://schemas.android.com/tools"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/icon_placeholder_gray"
        android:scaleType="centerCrop"
        android:contentDescription="@string/event_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintDimensionRatio="16:9"/>

    <TextView
        android:id="@+id/rating_view"
        android:layout_width="50dp"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:text="@string/rating_example"
        android:background="@drawable/background_rating_gray"
        android:padding="6dp"
        android:textStyle="bold"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view"/>

    <ImageButton
        android:id="@+id/favorite_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/title_saved"
        anrdoid:foreground="@null"
        android:background="@drawable/icon_heart_white_to_red"
        android:focusable="true"
        android:clickable="true"
        android:layout_margin="6dp"
        android:padding="6dp"
        android:duplicateParentState="false"
        app:layout_constraintRight_toRightOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view" />

    <ImageView
        android:id="@+id/ticket_icon"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@drawable/icon_ticket_green"
        android:rotation="90"
        android:contentDescription="@string/title_my_tickets"
        android:layout_margin="3dp"
        android:padding="3dp"
        app:layout_constraintRight_toRightOf="@id/image_view"
        app:layout_constraintTop_toTopOf="@id/image_view"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/title_view"
        android:textSize="22sp"
        android:textStyle="bold"
        android:text="@string/title"
        android:layout_marginTop="10dp"
        android:layout_marginStart="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_view"
        app:layout_constraintLeft_toLeftOf="@id/image_view"/>

    <TextView
        android:id="@+id/details_view"
        android:textSize="16sp"
        android:text="@string/details"
        android:layout_marginTop="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        app:layout_constraintLeft_toLeftOf="@id/title_view"/>

    <TextView
        android:id="@+id/price_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintTop_toBottomOf="@id/details_view"
        app:layout_constraintLeft_toLeftOf="@id/details_view"/>

</androidx.constraintlayout.widget.ConstraintLayout>
