<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_gray"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/navigation_explore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/title_explore"
        android:textSize="16sp"
        android:textColor="@color/gray_to_black"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:drawableTopCompat="@drawable/icon_search_black"
        app:drawableTint="@color/gray_to_black"
        android:clickable="true"
        android:focusable="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/navigation_saved"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/title_saved"
        android:textSize="16sp"
        android:textColor="@color/gray_to_black"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:drawableTopCompat="@drawable/icon_heart_red"
        app:drawableTint="@color/gray_to_red" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/navigation_my_tickets"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/title_my_tickets"
        android:textSize="16sp"
        android:textColor="@color/gray_to_black"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:drawableTopCompat="@drawable/icon_ticket_green"
        app:drawableTint="@color/gray_to_green" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/navigation_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:text="@string/title_profile"
        android:textSize="16sp"
        android:textColor="@color/gray_to_black"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        app:drawableTopCompat="@drawable/icon_user_black"
        app:drawableTint="@color/gray_to_black" />

</LinearLayout>